[package]
name = "imgui"
version = "0.1.0"
authors = ["Akira Kano <a.kano1101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#imgui = { git = "https://github.com/Gekkio/imgui-rs" }
#glutin = { git = "https://github.com/rust-windowing/glutin" }
glium = "*"
