[package]
name = "aqun-imgui"
version = "0.1.0"
authors = ["Akira Kano <a.kano1101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
imgui = "0.2.1"
imgui-glium-renderer = "0.2.0"
glium = "0.25.1"
imgui-winit-support = "0.2.1"
winit = "0.19.3"
